fix wrap height and added right side image in log-in page

--- a/makets/Registration flow/styles/style.scss
+++ b/makets/Registration flow/styles/style.scss
@@ -28,7 +28,7 @@ a {
 	display: flex;
 	margin: 40px auto;
 	width: 1440px;
-	// height: 1020px;
+	height: 1020px;
 	background: $light;
 
 	// #region Registration page
@@ -537,7 +537,7 @@ a {
 
 		// #region Footer
 		&-footer {
-			margin: 240px 0 0 0;
+			margin: 165px 0 0 0;
 			text-align: center;
 
 			&-title {
@@ -552,5 +552,18 @@ a {
 		}
 		// #endregion
 	}
+
+	.log-in-image {
+		display: block;
+		width: 960px;
+		background: $image-bg;
+
+		img {
+			position: absolute;
+			bottom: -135px;
+			width: 960px;
+		}
+	}
+
 	// #endregion
 }
